--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,12 @@
-
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/notes_app?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username = root
-spring.datasource.password = 27071994
-
+spring.datasource.url=${DATASOURCE_URL:jdbc:mysql://localhost:3380/demodb?allowPublicKeyRetrieval=true&useSSL=false}
+spring.datasource.username=${DATASOURCE_USERNAME:root}
+spring.datasource.password=${DATASOURCE_PASSWORD:root12}
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate ddl auto (create, create-drop, validate, update) is used for database initialization.
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto=create
 
 
